@@ -1,3 +1,8 @@
+2004-11-01  Tor Lillqvist  <tml@iki.fi>
+
+	* glib/gstdio.c (g_lstat): Implement correctly also on Unix
+	systems without lstat(). (#157038, Morten Welinder)
+
 2004-11-01  Ray Strode <rstrode@redhat.com>
 
 	* glib/gkeyfile.c:
